# dioxus-autotrade

./: Cargo.toml  Dioxus.toml  README.md  dioxus-autotrade.config
assets/: tailwind.css
src/: main.rs
src/components/: buy.rs  home.rs  market.rs  nav_layout.rs  sell.rs  settings.rs
src/config/: app_config.rs
src/model/: alarm.rs  buy_btc.rs  get_balance.rs  get_ticker_price.rs  sell_btc.rs  sign_signature.rs
