[package]
name = "dioxus-autotrade"
version = "1.9.0"
authors = ["boyangqin <qboyang@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.3", features = ["desktop", "router"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
futures-util = "0.3"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio = { version = "1.49.0", features = ["full"]}
chrono = "0.4.44"
home = "0.5.4"
rodio = "0.17"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
